kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: RatingService
  labels:
    app: RatingService
  name: RatingService
spec:
  ports:
  
    - protocol: TCP
      port: 8005
      targetPort: 8005
   
  selector:
    app: RatingService
  type: ClusterIP
